<resources>
    <string name="app_name">Lift Run Eat</string>
    <string name="title_home">Lift</string>
    <string name="title_track">Eat</string>
    <string name="title_history">History</string>
    <string name="title_run">Run</string>
    <string name="title_volume">Volume</string>
    <string name="welcome">Welcome!</string>
    <string name="intro_text">Please Select Your Fitness Goal:</string>
    <string name="cut">Cut</string>
    <string name="recomp">Maintain</string>
    <string name="bulk">Bulk</string>
    <string name="imperial">Pounds</string>
    <string name="metric">Kilos</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="preferences">Preferences:</string>
    <string name="weight">Weight:\n180 lbs</string>
    <string name="protein">Protein:\n 0.6g per lb</string>
    <string name="goalsurplus">Surplus Goal:\n300+ Calories</string>
    <string name="goaldeficit">Deficit Goal:\n-500 Calories</string>
    <string name="goalrecomp">Maintenance Goal:\nNet Calories +/- 100</string>
    <string name="goalsets">Volume Goal\n(Sets/Muscle/Week):\n15</string>
    <string name="done">Proceed</string>
    <string name="title_gender">Avatar</string>
    <string name="gender">gender</string>
    <string name="gender_summary">Select Avatar</string>
    <string name="gender_title">Avatar</string>
    <string-array name="workout_types">
        <item>Run</item>
        <item>Row</item>
        <item>Olypmic Eagle Tackling</item>
    </string-array>
    <string-array name="distance_array">
        <item>Miles</item>
        <item>Kilometers</item>
    </string-array>
    <string-array name="workout_paces">
        <item>Minutes/Mile</item>
        <item>Minutes/km</item>
        <item>Minutes/500m</item>
        <item>Minutes/100m</item>
        <item>Miles Per Hour</item>
    </string-array>
    <string-array name="calorie_burn_type">
        <item>Per Minute</item>
        <item>Per Mile</item>
        <item>Per Kilometer</item>
        <item>Per Hour</item>
    </string-array>
</resources>