<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:id="@+id/layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/background2">

    <TextView
        android:id="@+id/text_notifications"
        android:text="@string/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
      />
    <TextView
        android:id="@+id/intro_text"
        android:text="@string/intro_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <LinearLayout
        android:animateLayoutChanges="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:id="@+id/cut"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:elevation="5dp"
            fancy:mfb_borderColor="@color/colorPrimary"
            fancy:mfb_borderWidth="1dp"
            fancy:mfb_defaultColor="@color/white"
            fancy:mfb_focusColor="@color/colorPrimaryDark"
            fancy:mfb_iconFont="fontawesome.ttf"
            fancy:mfb_iconPosition="top"
            fancy:mfb_radius="1dp"
            fancy:mfb_textSize="18sp"
            fancy:mfb_text="@string/cut"
            fancy:mfb_textColor="@color/colorPrimary" />

        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:id="@+id/recomp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:elevation="5dp"
            fancy:mfb_borderColor="@color/colorPrimary"
            fancy:mfb_borderWidth="1dp"
            fancy:mfb_defaultColor="@color/white"
            fancy:mfb_focusColor="@color/colorPrimaryDark"
            fancy:mfb_iconFont="fontawesome.ttf"
            fancy:mfb_iconPosition="top"
            fancy:mfb_radius="1dp"
            fancy:mfb_textSize="18sp"
            fancy:mfb_text="@string/recomp"
            fancy:mfb_textColor="@color/colorPrimary" />

        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:id="@+id/bulk"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:elevation="5dp"
            fancy:mfb_borderColor="@color/colorPrimary"
            fancy:mfb_borderWidth="1dp"
            fancy:mfb_defaultColor="@color/white"
            fancy:mfb_focusColor="@color/colorPrimaryDark"
            fancy:mfb_iconFont="fontawesome.ttf"
            fancy:mfb_iconPosition="top"
            fancy:mfb_radius="1dp"
            fancy:mfb_textSize="18sp"
            fancy:mfb_text="@string/bulk"
            fancy:mfb_textColor="@color/colorPrimary" />

    </LinearLayout>
    <LinearLayout
        android:animateLayoutChanges="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:visibility="gone"
            android:id="@+id/goal_deficit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:elevation="5dp"
            fancy:mfb_borderColor="@color/colorPrimary"
            fancy:mfb_borderWidth="1dp"
            fancy:mfb_defaultColor="@color/white"
            fancy:mfb_focusColor="@color/colorPrimaryDark"
            fancy:mfb_iconFont="fontawesome.ttf"
            fancy:mfb_iconPosition="top"
            fancy:mfb_radius="1dp"
            fancy:mfb_textSize="18sp"
            fancy:mfb_text="@string/goaldeficit"
            fancy:mfb_textColor="@color/colorPrimary" />

        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:visibility="gone"
            android:id="@+id/goal_surplus"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:elevation="5dp"
            fancy:mfb_borderColor="@color/colorPrimary"
            fancy:mfb_borderWidth="1dp"
            fancy:mfb_defaultColor="@color/white"
            fancy:mfb_focusColor="@color/colorPrimaryDark"
            fancy:mfb_iconFont="fontawesome.ttf"
            fancy:mfb_iconPosition="top"
            fancy:mfb_radius="1dp"
            fancy:mfb_textSize="18sp"
            fancy:mfb_text="@string/goalsurplus"
            fancy:mfb_textColor="@color/colorPrimary" />



        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:visibility="gone"
            android:id="@+id/goal_recomp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:elevation="5dp"
            fancy:mfb_borderColor="@color/colorPrimary"
            fancy:mfb_borderWidth="1dp"
            fancy:mfb_defaultColor="@color/white"
            fancy:mfb_focusColor="@color/colorPrimaryDark"
            fancy:mfb_iconFont="fontawesome.ttf"
            fancy:mfb_iconPosition="top"
            fancy:mfb_radius="1dp"
            fancy:mfb_textSize="18sp"
            fancy:mfb_text="@string/goalrecomp"
            fancy:mfb_textColor="@color/colorPrimary" />

    </LinearLayout>
    <LinearLayout
        android:animateLayoutChanges="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:visibility="gone"
            android:id="@+id/goal_sets"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:elevation="5dp"
            fancy:mfb_borderColor="@color/colorPrimary"
            fancy:mfb_borderWidth="1dp"
            fancy:mfb_defaultColor="@color/white"
            fancy:mfb_focusColor="@color/colorPrimaryDark"
            fancy:mfb_iconFont="fontawesome.ttf"
            fancy:mfb_iconPosition="top"
            fancy:mfb_radius="1dp"
            fancy:mfb_textSize="16sp"
            fancy:mfb_text="@string/goalsets"
            fancy:mfb_textColor="@color/colorPrimary" />
    </LinearLayout>
    <TextView
        android:id="@+id/preferences_text"
        android:text="@string/preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:id="@+id/imperial"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:elevation="5dp"
            fancy:mfb_borderColor="@color/colorPrimary"
            fancy:mfb_borderWidth="1dp"
            fancy:mfb_defaultColor="@color/white"
            fancy:mfb_focusColor="@color/colorPrimaryDark"
            fancy:mfb_iconFont="fontawesome.ttf"
            fancy:mfb_iconPosition="left"
            fancy:mfb_radius="1dp"
            fancy:mfb_textSize="18sp"
            fancy:mfb_text="@string/imperial"
            fancy:mfb_textColor="@color/colorPrimary" />
        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:id="@+id/metric"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:elevation="5dp"
            fancy:mfb_borderColor="@color/colorPrimary"
            fancy:mfb_borderWidth="1dp"
            fancy:mfb_defaultColor="@color/white"
            fancy:mfb_focusColor="@color/colorPrimaryDark"
            fancy:mfb_iconFont="fontawesome.ttf"
            fancy:mfb_iconPosition="left"
            fancy:mfb_radius="1dp"
            fancy:mfb_textSize="18sp"
            fancy:mfb_text="@string/metric"
            fancy:mfb_textColor="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:id="@+id/male"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:elevation="5dp"
            fancy:mfb_borderColor="@color/colorPrimary"
            fancy:mfb_borderWidth="1dp"
            fancy:mfb_defaultColor="@color/white"
            fancy:mfb_focusColor="@color/colorPrimaryDark"
            fancy:mfb_iconFont="fontawesome.ttf"
            fancy:mfb_iconPosition="left"
            fancy:mfb_radius="1dp"
            fancy:mfb_textSize="18sp"
            fancy:mfb_text="@string/male"
            fancy:mfb_textColor="@color/colorPrimary" />
        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:id="@+id/female"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:elevation="5dp"
            fancy:mfb_borderColor="@color/colorPrimary"
            fancy:mfb_borderWidth="1dp"
            fancy:mfb_defaultColor="@color/white"
            fancy:mfb_focusColor="@color/colorPrimaryDark"
            fancy:mfb_iconFont="fontawesome.ttf"
            fancy:mfb_iconPosition="left"
            fancy:mfb_radius="1dp"
            fancy:mfb_textSize="18sp"
            fancy:mfb_text="@string/female"
            fancy:mfb_textColor="@color/colorPrimary" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:id="@+id/weight"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:elevation="5dp"
            fancy:mfb_borderColor="@color/colorPrimary"
            fancy:mfb_borderWidth="1dp"
            fancy:mfb_defaultColor="@color/white"
            fancy:mfb_focusColor="@color/colorPrimaryDark"
            fancy:mfb_iconFont="fontawesome.ttf"
            fancy:mfb_iconPosition="left"
            fancy:mfb_radius="1dp"
            fancy:mfb_textSize="18sp"
            fancy:mfb_text="@string/weight"
            fancy:mfb_textColor="@color/colorPrimary" />
        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:id="@+id/protein"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:elevation="5dp"
            fancy:mfb_borderColor="@color/colorPrimary"
            fancy:mfb_borderWidth="1dp"
            fancy:mfb_defaultColor="@color/white"
            fancy:mfb_focusColor="@color/colorPrimaryDark"
            fancy:mfb_iconFont="fontawesome.ttf"
            fancy:mfb_iconPosition="left"
            fancy:mfb_radius="1dp"
            fancy:mfb_textSize="18sp"
            fancy:mfb_text="@string/protein"
            fancy:mfb_textColor="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>


    <TextView
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:id="@+id/done_text"
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_margin="20dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        />

</RelativeLayout>