<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="General">
        <EditTextPreference
            app:iconSpaceReserved="false"
            android:defaultValue="-2000"
            android:key="bmr"
            android:summary=""
            android:inputType="number"
            android:title="Base Daily Calorie Burn" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:defaultValue="20"
            android:key="volumes"
            android:summary=""
            android:inputType="number"
            android:title="Goal: Sets Per Week" />

<!--        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_upload_over_wifi"
            android:summary="@string/summary_upload_over_wifi"
            android:title="@string/title_auto_upload" />-->

           <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/gender_title"
            android:entries="@array/entries_gender"
            android:entryValues="@array/values_gender"
            android:key="@string/gender"
            android:summary="@string/gender_summary"
            android:title="@string/gender_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="Switches">




        <SwitchPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="what"
            android:summary="Turn this on/off"
            android:title="ON-OFF" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="Lift Settings">

       <!-- <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <Preference
            android:summary="@string/summary_faq"
            android:title="@string/title_faq">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_faq" />
        </Preference>

        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>

        <Preference android:title="@string/title_terms">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_terms" />
        </Preference>-->
    </PreferenceCategory>
</PreferenceScreen>